# dualCodeWorkbench

./: .gitattributes  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: pyproject.toml
apps/backend/dualcode/: __init__.py  adapters.py  api.py  api_agents.py  api_attachments.py  api_collaboration.py  api_jobs.py  api_runtime.py  api_workspaces.py  approvals.py  auth.py  claude_stream.py  cli_adapters.py  codex_app_server.py  config.py  connections.py  context_budget.py  database.py  database_migrations.py  diagnostics.py  events.py  execution_jobs.py  git_service.py  governance_defaults.py  handoff_prompt.py  main.py  models.py  runtime_settings.py  scheduler.py  schemas.py  security.py  seed.py  sidecar.py  ssh_adapter.py  state_machine.py  test_executor.py  workspace_remote.py
apps/backend/dualcode/alembic/: __init__.py  env.py
apps/backend/dualcode/alembic/versions/: 0001_baseline.py  __init__.py  (+1 more)
apps/backend/tests/: test_adapters.py  test_agent_resilience.py  test_api_auth.py  test_api_integration.py  test_approvals.py  test_claude_stream.py  test_cli_adapters.py  test_codex_app_server.py  test_context_budget.py  test_database_migrations.py  test_diagnostics.py  test_events.py  test_execution_jobs.py  test_git_service.py  test_runtime_settings.py  test_security.py  test_ssh_adapter.py  test_state_machine.py  test_test_executor.py  test_workspace_remote.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
(+61 files in other folders)
