[project]
name = "dualcode-backend"
version = "0.1.6"
description = "DualCode Workbench local backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "aiosqlite>=0.20,<1",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "asyncssh>=2.22,<3",
  "pillow>=11,<12"
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "httpx>=0.28,<1", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
